fix(cdk:scroll): simulated scrollbar blinks after data change

--- a/packages/components/table/style/size.less
+++ b/packages/components/table/style/size.less
@@ -26,7 +26,7 @@
 
     .@{table-prefix}-sortable-trigger,
     .@{table-prefix}-filterable-trigger {
-      height: @head-height;
+      height: calc(@head-height - 1px);
 
       &:last-child {
         margin-right: calc(4px - @padding-horizontal);
